--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+git init
+git remote add origin git@github.com:username/reponame.git
+git add .
+git commit -m “initial commit”
+git push origin master
 # Built application files
 *.apk
 *.aar
